feat(): New Wallet Endpoint to get the list by using includeHistory and includeAssets, bump V2.2.0